@@ -51,6 +51,7 @@ struct _Ecore_IMF_Context
    Ecore_IMF_Input_Panel_Layout   input_panel_layout;
    Ecore_IMF_Input_Panel_Lang     input_panel_lang;
    Eina_Bool                      allow_prediction : 1;
+   Eina_Bool                      input_panel_enabled : 1;
 };
 
 struct _Ecore_IMF_Module
